--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title> GEFORCE GTX </title>
     <link rel="stylesheet" href="styles.css">
     </head>
-
 <body>
     <h1>JAVI</h1> 
     <h2>JAVI</h2>
@@ -15,8 +14,7 @@
     <h5>JAVI</h5>
     <h6>JAVI</h6>
     <p><h1>ten ♥</h1></p>
-    <p style="color: rgb(38, 12, 233); font-size: 30px;"> Triste </p>
+    <p style="color: rgb(38, 12, 233); font-size: 30px;"> I Must Have Benn Love </p>
     <img src="fredagain.jpg" alt="" width="300px" height="350px">
 </body>
-
 </html>
